--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.96.0",
     "flowbite-react": "^0.12.4",
     "next": "^15.4.2",
